--- a/resume.html
+++ b/resume.html
@@ -43,11 +43,10 @@
                     <div class="col-sm-8">
                         <ul class="list-group">
                             <li class="list-group-item "> Alex Wilcken Pratt</li>
-                            <li class="list-group-item "> Web Application Developer</li>
-                            <li class="list-group-item "> BYU Campus Accommodations </li>
+                            <li class="list-group-item "> Software Developer</li>
+                            <li class="list-group-item "><a href="http://restaurant365software.com"> Restaurant365 </a> </li>
                             <li class="list-group-item "><a href="mailto:alex.w.pratt@gmail.com?" target="_top "> alex.w.pratt@gmail.com </a> </li>
                             <li class="list-group-item "><a href="https://www.linkedin.com/in/alexwilckenpratt"> LinkedIn</a></li>
-                            <li class="list-group-item "><a href="https://github.com/awpratt">GitHub</a></li>
                         </ul>
                         <div class="bs-callout bs-callout-danger ">
                             <h3>Education</h3>
@@ -65,7 +64,7 @@
                                         <td>BS, Information Systems</td>
                                         <td><a href="https://byu.edu ">BYU</a></td>
                                         <td>April 2018</td>
-                                        <td> 3.57 </td>
+                                        <td> 3.59 </td>
                                     </tr>
                                 </tbody>
 
@@ -73,10 +72,10 @@
                             <p class="list-group-item-text ">
                                 <ul>
                                     <li>
-                                        Specialized courses: Data Structures, System Analysis and Design, Business Processes and Controls, Computer Systems (including TI LaunchPad development)
+                                        Specialized courses: Data Structures, Enterprise Software Development, Project Management, Data Communication, System Analysis and Design, Business Processes and Controls, Computer Systems (including TI LaunchPad development)
                                     </li>
                                     <li>
-                                        Active member of <a href="https://ais.byu.edu ">Association for Information Systems</a>
+                                        VP of Marketing of <a href="https://ais.byu.edu ">Association for Information Systems, BYU Chapter</a>
                                         <ul>
                                             <li>
                                                 Former member of <a href="https://eclub.byu.edu ">BYU Entrepreneurship Club</a> and <a href="https://acm.byu.edu ">BYU Association for Computing Machinery</a>
@@ -89,9 +88,26 @@
                         <div class="bs-callout bs-callout-danger ">
                             <h3>Experience</h3>
                             <ul class="list-group ">
+                                <a class="list-group-item inactive-link " href="http://restaurant365software.com">
+                                    <h4 class="list-group-item-heading ">Software Developer at Restaurant365</h4>
+                                    <h5>Provo, Utah --- January 2017 to Present</h5>
+                                    <p class="list-group-item-text ">
+                                        <ul>
+                                            <li>
+                                                Member of the Development Team, working to help prepare and implement innovative solutions for our customers
+                                            </li>
+                                            <li>
+                                                Development with Node.js, using various packages and tools such as Electron to deploy desktop applications to compliment our web solution and improve integrations with existing customer tools
+                                            </li>
+                                            <li>
+                                                Preparation of mockups to assist in the development of new features to be added to our web solution
+                                            </li>
+                                        </ul>
+                                    </p>
+                                </a>
                                 <a class="list-group-item inactive-link " href="http://www.byu.edu/oncampushousing/index.shtml ">
                                     <h4 class="list-group-item-heading ">Web Application Developer at BYU Housing</h4>
-                                    <h5>Provo, Utah --- April 2016 to Present</h5>
+                                    <h5>Provo, Utah --- April 2016 to November 2016</h5>
                                     <p class="list-group-item-text ">
                                         <ul>
                                             <li>
