updated index job title

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
             <div class="col-xs-4 text-right" id="myHeaderBox">
                 <h1>Alex Wilcken Pratt</h1>
                 <hr>
-                <h1> <small>Software Developer | System Analyst</small></h1>
-                <p class="lead">I am a husband, computer nerd, sport-enthusiast, and all-around happy guy. I am studying Information Systems at Brigham Young University and am a Web Application Developer for BYU Campus Accommodations. I like finding problems and I love
-                    solving them.
+                <h1> <small>Software Developer | Systems Analyst</small></h1>
+                <p class="lead">I am a husband, computer nerd, sport-enthusiast, and all-around happy guy. I am studying Information Systems at Brigham Young University and am a Software Developer for Restaurant365. I like finding problems and I love solving them.
                 </p>
             </div>
         </div>
