--- a/index.html
+++ b/index.html
@@ -1,51 +1,61 @@
-<html lang="en">
-<!--Page and Template by Alex Wilcken Pratt. Last updated 5 Oct 2016-->
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="harbor.jpg" type="image/x-icon">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body,
+    h1 {
+        font-family: "Raleway", sans-serif;
+    }
 
-<head>
-    <link rel="shortcut icon" href="images/profile_picture_favicon.jpg" />
-    <title>Alex Wilcken Pratt</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="my_styling.css">
-</head>
+    body,
+    h1,
+    p,
+    i,
+    div,
+    footer {
+        color: grey;
+    }
+
+    body,
+    html {
+        height: 100%
+    }
+
+    .bgimg {
+        background-image: url('harbor.jpg');
+        min-height: 100%;
+        background-position: center;
+        background-size: cover;
+    }
+</style>
 
 <body>
-
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Alex Wilcken Pratt</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="interests.html">Interests</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                </ul>
-            </div>
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+        <div class="w3-display-topleft w3-padding-large w3-xlarge">
+            AWP
         </div>
-    </nav>
-
-    <div class="container my-image-container-home">
-        <div class="row">
-            <div class="col-xs-8">
-            </div>
-            <div class="col-xs-4 text-right" id="myHeaderBox">
-                <h1>Alex Wilcken Pratt</h1>
-                <hr>
-                <h1> <small>Software Developer | Systems Analyst</small></h1>
-                <p class="lead">I am a husband, computer nerd, sport-enthusiast, and all-around happy guy. I am studying Information Systems at Brigham Young University and am a Software Developer for Restaurant365. I like finding problems and I love solving them.
-                </p>
-            </div>
+        <div class="w3-display-middle w3-center">
+            <h1 class="w3-jumbo w3-animate-top">Alex Wilcken Pratt</h1>
+            <hr class="w3-border-grey" style="margin:auto;width:40%">
+            <p class="w3-large w3-center">
+                <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a> 
+                <a href="https://github.com/awpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a> 
+                <a href="https://bitbucket.com/awpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/alex.w.pratt" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i></a>  
+                <a href="https://www.instagram.com/alex.w.pratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a> 
+                <a href="https://twitter.com/awpratt" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity"></i></a> 
+            </p>
+        </div>
+        <div class="w3-display-bottomright w3-padding-large">
+            Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
         </div>
     </div>
-
 </body>
+
+</html>
