--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
     <div class="w3-display-topleft w3-padding-large w3-xlarge">
       AWP
     </div>
+    <div class="w3-hide-large w3-hide-medium w3-display-topright w3-padding-large">
+      <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a>
+      <a href="https://github.com/awpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
+      <a href="https://bitbucket.com/awpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
+      <a href="https://www.facebook.com/alex.w.pratt" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i></a>
+      <a href="https://www.instagram.com/alex.w.pratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a>
+      <a href="https://twitter.com/awpratt" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity"></i></a>
+    </div>
     <div class="w3-display-middle w3-center">
       <h1 class="w3-jumbo w3-animate-top">Alex Wilcken Pratt</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
-      <p class="w3-large w3-center">
+      <p class="w3-hide-small">
         <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a>
         <a href="https://github.com/awpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
         <a href="https://bitbucket.com/awpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
@@ -55,17 +63,28 @@
         <a href="https://www.instagram.com/alex.w.pratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a>
         <a href="https://twitter.com/awpratt" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity"></i></a>
       </p>
-      <div class="w3-panel w3-light-grey">
-          <p class="w3-large w3-serif">
+      <div class="w3-hide-small">
+        <div class="w3-panel w3-light-grey">
+          <p class="w3-medium w3-serif">
             <i id="quote_body"></i>
           </p>
           <p id="quote_author"></p>
         </div>
+      </div>
     </div>
     <div class="w3-display-bottomright w3-padding-large">
       Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
     </div>
   </div>
+  <!--<div class="w3-hide-large">
+    <div class="w3-panel w3-light-grey">
+          <p class="w3-large w3-serif">
+            <i id="quote_body"></i>
+          </p>
+          <p id="quote_author"></p>
+        </div>
+      </div>
+  </div>-->
 </body>
 
 
