--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         <a href="https://www.instagram.com/alex.w.pratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a>
         <a href="https://twitter.com/awpratt" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity"></i></a>
       </p>
-      <div class="w3-hide-small">
-        <div class="w3-panel w3-light-grey">
-          <p class="w3-medium w3-serif">
-            <i id="quote_body"></i>
-          </p>
-          <p id="quote_author"></p>
-        </div>
+    </div>
+    <div class="w3-hide-small w3-display-bottomleft w3-padding-large">
+      <div class="w3-panel w3-light-grey">
+        <p class="w3-medium w3-serif">
+          <i id="quote_body"></i>
+        </p>
+        <p id="quote_author"></p>
       </div>
     </div>
     <div class="w3-display-bottomright w3-padding-large">
