--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="w3-display-middle w3-center">
       <h1 class="w3-jumbo w3-animate-top">Alex Wilcken Pratt</h1>
-      <hr class="w3-border-grey" style="margin:auto;width:40%">
+      <hr class="w3-border-grey w3-hide-small" style="margin:auto;width:40%">
       <p class="w3-hide-small">
         <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a>
         <a href="https://github.com/awpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
@@ -64,7 +64,7 @@
         <a href="https://twitter.com/awpratt" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity"></i></a>
       </p>
     </div>
-    <div class="w3-hide-small w3-display-bottomleft w3-padding-large">
+    <div class="w3-hide-small w3-hide-medium  w3-display-bottomleft w3-padding-large">
       <div class="w3-panel w3-light-grey">
         <p class="w3-medium w3-serif">
           <i id="quote_body"></i>
