updated links, readded twitter

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
     <div class="w3-hide-large w3-hide-medium w3-display-topright w3-padding-large">
       <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a>
       <a href="https://github.com/alexwpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
-      <a href="https://bitbucket.com/awpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
+      <a href="https://bitbucket.com/alexwpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
       <a href="https://www.facebook.com/alexwpratt" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i></a>
       <a href="https://www.instagram.com/alexwpratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a>
+      <a href="https://www.twitter.com/alexwpratt/" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity"></i></a>
     </div>
     <div class="w3-display-middle w3-center">
       <h1 class="w3-jumbo w3-animate-top">Alex Wilcken Pratt</h1>
@@ -57,9 +58,10 @@
       <p class="w3-hide-small">
         <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a>
         <a href="https://github.com/alexwpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
-        <a href="https://bitbucket.com/awpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
+        <a href="https://bitbucket.com/alexwpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
         <a href="https://www.facebook.com/alexwpratt" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i></a>
         <a href="https://www.instagram.com/alexwpratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a>
+        <a href="https://www.twitter.com/alexwpratt/" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity"></i></a>
       </p>
     </div>
     <div class="w3-hide-small w3-hide-medium  w3-display-bottomleft w3-padding-large">
