--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@
       AWP
     </div>
     <div class="w3-hide-large w3-hide-medium w3-display-topright w3-padding-large">
-      <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a>
-      <a href="https://github.com/alexwpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
-      <a href="https://bitbucket.com/alexwpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
-      <a href="https://www.facebook.com/alexwpratt" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i></a>
-      <a href="https://www.instagram.com/alexwpratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank">
+        <i class="fa fa-linkedin fa-2x w3-hover-opacity"></i>
+      </a>
+      <a href="https://github.com/alexwpratt" target="_blank">
+        <i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i>
+      </a>
+      <a href="https://bitbucket.com/alexwpratt" target="_blank">
+        <i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/alexwpratt" target="_blank">
+        <i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i>
+      </a>
+      <a href="https://www.instagram.com/alexwpratt/" target="_blank">
+        <i class="fa fa-instagram fa-2x w3-hover-opacity"></i>
+      </a>
     </div>
     <div class="w3-display-middle w3-center">
       <h1 class="w3-jumbo w3-animate-top">Alex Wilcken Pratt</h1>
       <hr class="w3-border-grey w3-hide-small" style="margin:auto;width:40%">
       <p class="w3-hide-small">
-        <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity"></i></a>
-        <a href="https://github.com/alexwpratt" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
-        <a href="https://bitbucket.com/alexwpratt" target="_blank"><i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
-        <a href="https://www.facebook.com/alexwpratt" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i></a>
-        <a href="https://www.instagram.com/alexwpratt/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity"></i></a>
+        <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank">
+          <i class="fa fa-linkedin fa-2x w3-hover-opacity"></i>
+        </a>
+        <a href="https://github.com/alexwpratt" target="_blank">
+          <i class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i>
+        </a>
+        <a href="https://bitbucket.com/alexwpratt" target="_blank">
+          <i class="fa fa-bitbucket fa-2x w3-hover-opacity" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/alexwpratt" target="_blank">
+          <i class="fa fa-facebook-official fa-2x w3-hover-opacity"></i>
+        </a>
+        <a href="https://www.instagram.com/alexwpratt/" target="_blank">
+          <i class="fa fa-instagram fa-2x w3-hover-opacity"></i>
+        </a>
       </p>
     </div>
-    <div class="w3-hide-small w3-hide-medium  w3-display-bottomleft w3-padding-large">
-      <div class="w3-panel w3-light-grey">
-        <p class="w3-medium w3-serif">
-          <i id="quote_body"></i>
-        </p>
-        <p id="quote_author"></p>
-      </div>
-    </div>
-    <div class="w3-display-bottomright w3-padding-large">
-      Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-    </div>
   </div>
-  <!--<div class="w3-hide-large">
-    <div class="w3-panel w3-light-grey">
-          <p class="w3-large w3-serif">
-            <i id="quote_body"></i>
-          </p>
-          <p id="quote_author"></p>
-        </div>
-      </div>
-  </div>-->
 </body>
 
 
