--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     color: grey;
   }
 
+  a:hover, a:focus, a:active, a:visited, a:link{
+    text-decoration: none;
+  }
+
   body,
   html {
     height: 100%
@@ -36,7 +40,6 @@
 </style>
 
 <head>
-  <script type="text/javascript" src="quotes.js"></script>
 </head>
 
 <body onload="load()">
@@ -48,6 +51,10 @@
       <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank">
         <i class="fa fa-linkedin fa-2x w3-hover-opacity"></i>
       </a>
+      &nbsp;
+      <a href="https://twitter.com/alexwpratt" target="_blank">
+        <i class="fa fa-twitter fa-2x w3-hover-opacity"></i>
+      </a>
     </div>
     <div class="w3-display-middle w3-center">
       <h1 class="w3-jumbo w3-animate-top">Alex Wilcken Pratt</h1>
@@ -55,6 +62,10 @@
       <p class="w3-hide-small">
         <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank">
           <i class="fa fa-linkedin fa-2x w3-hover-opacity"></i>
+        </a>
+        &nbsp;
+        <a href="https://twitter.com/alexwpratt" target="_blank">
+          <i class="fa fa-twitter fa-2x w3-hover-opacity"></i>
         </a>
       </p>
     </div>
