--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link rel="shortcut icon" href="LogoBackground.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+  crossorigin="anonymous">
 <style>
   body,
   h1 {
@@ -49,11 +50,15 @@
     </div>
     <div class="w3-hide-large w3-hide-medium w3-display-topright w3-padding-large">
       <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank">
-        <i class="fa fa-linkedin fa-2x w3-hover-opacity"></i>
+        <i class="fab fa-linkedin-in fa-2x w3-hover-opacity"></i>
       </a>
       &nbsp;
       <a href="https://twitter.com/alexwpratt" target="_blank">
-        <i class="fa fa-twitter fa-2x w3-hover-opacity"></i>
+        <i class="fab fa-twitter fa-2x w3-hover-opacity"></i>
+      </a>
+      &nbsp;
+      <a href="https://alexwpratt.blogspot.com" target="_blank">
+        <i class="fab fa-blogger-b fa-2x w3-hover-opacity"></i>
       </a>
     </div>
     <div class="w3-display-middle w3-center">
@@ -61,11 +66,15 @@
       <hr class="w3-border-grey w3-hide-small" style="margin:auto;width:40%">
       <p class="w3-hide-small">
         <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank">
-          <i class="fa fa-linkedin fa-2x w3-hover-opacity"></i>
+          <i class="fab fa-linkedin-in fa-2x w3-hover-opacity"></i>
         </a>
         &nbsp;
         <a href="https://twitter.com/alexwpratt" target="_blank">
-          <i class="fa fa-twitter fa-2x w3-hover-opacity"></i>
+          <i class="fab fa-twitter fa-2x w3-hover-opacity"></i>
+        </a>
+        &nbsp;
+        <a href="https://alexwpratt.blogspot.com" target="_blank">
+          <i class="fab fa-blogger-b fa-2x w3-hover-opacity"></i>
         </a>
       </p>
     </div>
