--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link rel="shortcut icon" href="LogoBackground.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-  crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+  integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <style>
   body,
   h1 {
@@ -23,7 +23,11 @@
     color: grey;
   }
 
-  a:hover, a:focus, a:active, a:visited, a:link{
+  a:hover,
+  a:focus,
+  a:active,
+  a:visited,
+  a:link {
     text-decoration: none;
   }
 
@@ -57,8 +61,8 @@
         <i class="fab fa-twitter fa-2x w3-hover-opacity"></i>
       </a>
       &nbsp;
-      <a href="https://alexwpratt.blogspot.com" target="_blank">
-        <i class="fab fa-blogger-b fa-2x w3-hover-opacity"></i>
+      <a href="https://itunes.apple.com/us/podcast/inconsequentialism/id1458046001" target="_blank">
+        <i class="fas fa-podcast fa-2x w3-hover-opacity"></i>
       </a>
     </div>
     <div class="w3-display-middle w3-center">
@@ -73,8 +77,8 @@
           <i class="fab fa-twitter fa-2x w3-hover-opacity"></i>
         </a>
         &nbsp;
-        <a href="https://alexwpratt.blogspot.com" target="_blank">
-          <i class="fab fa-blogger-b fa-2x w3-hover-opacity"></i>
+        <a href="https://itunes.apple.com/us/podcast/inconsequentialism/id1458046001" target="_blank">
+          <i class="fas fa-podcast fa-2x w3-hover-opacity"></i>
         </a>
       </p>
     </div>
