--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
       <a href="https://itunes.apple.com/us/podcast/inconsequentialism/id1458046001" target="_blank">
         <i class="fas fa-podcast fa-2x w3-hover-opacity"></i>
       </a>
+      &nbsp;
+      <a href="https://open.spotify.com/show/5sMtj2KdImvKo3gnjltAx8?si=kKELPlnrQ-qnTmPiYB7sRw" target="_blank">
+        <i class="fab fa-spotify fa-2x w3-hover-opacity"></i>
+      </a>
+
     </div>
     <div class="w3-display-middle w3-center">
       <h1 class="w3-jumbo w3-animate-top">Alex Wilcken Pratt</h1>
@@ -79,6 +84,10 @@
         &nbsp;
         <a href="https://itunes.apple.com/us/podcast/inconsequentialism/id1458046001" target="_blank">
           <i class="fas fa-podcast fa-2x w3-hover-opacity"></i>
+        </a>
+        &nbsp;
+        <a href="https://open.spotify.com/show/5sMtj2KdImvKo3gnjltAx8?si=kKELPlnrQ-qnTmPiYB7sRw" target="_blank">
+          <i class="fab fa-spotify fa-2x w3-hover-opacity"></i>
         </a>
       </p>
     </div>
