--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       <a href="https://open.spotify.com/show/5sMtj2KdImvKo3gnjltAx8?si=kKELPlnrQ-qnTmPiYB7sRw" target="_blank">
         <i class="fab fa-spotify fa-2x w3-hover-opacity"></i>
       </a>
+      &nbsp;
+      <a href="https://play.google.com/music/m/Ijadtrk6vyjlie6rzufs6wms52u?t=Inconsequentialism" target="_blank">
+        <i class="fab fa-google-play fa-2x w3-hover-opacity"></i>
+      </a>
 
     </div>
     <div class="w3-display-middle w3-center">
@@ -88,6 +92,10 @@
         &nbsp;
         <a href="https://open.spotify.com/show/5sMtj2KdImvKo3gnjltAx8?si=kKELPlnrQ-qnTmPiYB7sRw" target="_blank">
           <i class="fab fa-spotify fa-2x w3-hover-opacity"></i>
+        </a>
+        &nbsp;
+        <a href="https://play.google.com/music/m/Ijadtrk6vyjlie6rzufs6wms52u?t=Inconsequentialism" target="_blank">
+          <i class="fab fa-google-play fa-2x w3-hover-opacity"></i>
         </a>
       </p>
     </div>
