added quotes on separate page

--- a/index.html
+++ b/index.html
@@ -47,30 +47,34 @@
 <head>
 </head>
 
-<body onload="load()">
-  <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-    <div class="w3-display-topleft w3-padding-large w3-xlarge">
+<body>
+  <div class="bgimg w3-display-container w3-animate-opacity w3-text-white ">
+    <div class="w3-display-topleft w3-padding-large w3-xlarge w3-hide-small">
       AWP
     </div>
     <div class="w3-hide-large w3-hide-medium w3-display-topright w3-padding-large">
       <a href="https://www.linkedin.com/in/alexwilckenpratt" target="_blank">
-        <i class="fab fa-linkedin-in fa-2x w3-hover-opacity"></i>
+        <i class="fab fa-linkedin-in fa-lg w3-hover-opacity"></i>
       </a>
       &nbsp;
       <a href="https://twitter.com/alexwpratt" target="_blank">
-        <i class="fab fa-twitter fa-2x w3-hover-opacity"></i>
+        <i class="fab fa-twitter fa-lg w3-hover-opacity"></i>
       </a>
       &nbsp;
       <a href="https://itunes.apple.com/us/podcast/inconsequentialism/id1458046001" target="_blank">
-        <i class="fas fa-podcast fa-2x w3-hover-opacity"></i>
+        <i class="fas fa-podcast fa-lg w3-hover-opacity"></i>
       </a>
       &nbsp;
       <a href="https://open.spotify.com/show/5sMtj2KdImvKo3gnjltAx8?si=kKELPlnrQ-qnTmPiYB7sRw" target="_blank">
-        <i class="fab fa-spotify fa-2x w3-hover-opacity"></i>
+        <i class="fab fa-spotify fa-lg w3-hover-opacity"></i>
       </a>
       &nbsp;
       <a href="https://play.google.com/music/m/Ijadtrk6vyjlie6rzufs6wms52u?t=Inconsequentialism" target="_blank">
-        <i class="fab fa-google-play fa-2x w3-hover-opacity"></i>
+        <i class="fab fa-google-play fa-lg w3-hover-opacity"></i>
+      </a>
+      &nbsp;
+      <a href="quotes.html" target="_blank">
+        <i class="fas fa-quote-left fa-lg w3-hover-opacity"></i>
       </a>
 
     </div>
@@ -96,6 +100,10 @@
         &nbsp;
         <a href="https://play.google.com/music/m/Ijadtrk6vyjlie6rzufs6wms52u?t=Inconsequentialism" target="_blank">
           <i class="fab fa-google-play fa-2x w3-hover-opacity"></i>
+        </a>
+        &nbsp;
+        <a href="quotes.html" target="_blank">
+          <i class="fas fa-quote-left fa-2x w3-hover-opacity"></i>
         </a>
       </p>
     </div>
