--- a/index.html
+++ b/index.html
@@ -3,7 +3,49 @@
 <title>Alex Wilcken Pratt</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- PWA stuff -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 <link rel="shortcut icon" href="LogoBackground.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="icons/icon-256x256.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icons/icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="icons/icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180x180.png">
+
+<link href="splashscreens/iphone5_splash.png"
+  media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/iphone6_splash.png"
+  media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/iphoneplus_splash.png"
+  media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/iphonex_splash.png"
+  media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/iphonexr_splash.png"
+  media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/iphonexsmax_splash.png"
+  media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/ipad_splash.png"
+  media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/ipadpro1_splash.png"
+  media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/ipadpro3_splash.png"
+  media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
+  rel="apple-touch-startup-image" />
+<link href="splashscreens/ipadpro2_splash.png"
+  media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
+  rel="apple-touch-startup-image" />
+<!-- end PWA stuff -->
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -41,6 +83,11 @@
     min-height: 100%;
     background-position: center;
     background-size: cover;
+  }
+
+  body {
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
   }
 </style>
 
