setup background color for immersive status bar

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   }
 
   body {
+    background-color: #BAD1F0;
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
   }
