--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <i class="fab fa-google-play fa-lg w3-hover-opacity"></i>
       </a>
       &nbsp;
-      <a href="quotes.html" target="_blank">
+      <a href="quotes.html">
         <i class="fas fa-quote-left fa-lg w3-hover-opacity"></i>
       </a>
 
@@ -150,7 +150,7 @@
           <i class="fab fa-google-play fa-2x w3-hover-opacity"></i>
         </a>
         &nbsp;
-        <a href="quotes.html" target="_blank">
+        <a href="quotes.html">
           <i class="fas fa-quote-left fa-2x w3-hover-opacity"></i>
         </a>
       </p>
